# minirt

./: .Makefile1.swp  CMakeLists.txt  Makefile  cam_1.rt  cam_4.rt  example.rt  example1.rt  miniRT  test.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
example.dSYM/Contents/Resources/DWARF/: example
includes/: minirt.h  parser.h
main.c.dSYM/Contents/Resources/DWARF/: main.c
miniRT.dSYM/Contents/Resources/DWARF/: miniRT
srcs/: errors_handler.c  example.rt  general_elements_parser.c  main  main.c  math_utils.c  parser  parser.c  parser_utils  parser_utils.c  shapes_parser.c  utils.c
srcs/main.dSYM/Contents/Resources/DWARF/: main
srcs/parser.dSYM/Contents/Resources/DWARF/: parser
srcs/parser_utils.dSYM/Contents/: Info.plist
srcs/parser_utils.dSYM/Contents/Resources/DWARF/: parser_utils
test.dSYM/Contents/Resources/DWARF/: test
